Activate singular piece on physics click

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\GM.cs" />
+     <Compile Include="Assets\Scripts\PieceOperator.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>/Users/charlesrhone/Desktop/3D_Stuff/Tic_Tac_Toe_Ultimate/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
