--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\GM.cs" />
      <Compile Include="Assets\Scripts\PieceOperator.cs" />
      <Compile Include="Assets\Scripts\PlayerPiece.cs" />
+     <Compile Include="Assets\Scripts\ResetGame.cs" />
      <Compile Include="Assets\Scripts\Turn.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>/Users/charlesrhone/Desktop/3D_Stuff/Tic_Tac_Toe_Ultimate/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
